new Integer() was changed to Integer.valueOf() due to performance issue.